<resources>
    <string name="app_name">RxJava</string>
    <string name="yes">好</string>
    <string name="no">不要</string>
    <string name="ok">確定</string>
    <string name="confirm">確定</string>
    <string name="dun_allow">不允许</string>
    <string name="others">其他</string>
    <string name="more">更多</string>
    <string name="more_home">更多</string>
    <string name="copy">复制</string>
    <string name="from_poi_name">从%s</string>
    <string name="filter_bookmark_most_recent">最近收藏</string>
    <string name="filter_bookmark_latest_release">最近更新</string>
    <string name="filter_bookmark_expired_soon">快将到期</string>
    <string name="expand_all">展开全部</string>
    <string name="hide_all">收起</string>
    <string name="copied_to_clipboard">已复制</string>
    <string name="most_bookmarked">最多收藏</string>
    <string name="cancel">取消</string>
    <string name="Wechat">微信</string>
    <string name="close">关闭</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="welcome">欢迎</string>
    <string name="done">完成</string>
    <string name="edit">修改</string>
    <string name="all_or_edit">查看所有 / 修改</string>
    <string name="submit">提交</string>
    <string name="delete">删除</string>
    <string name="clear">清除</string>
    <string name="insert">插入</string>
    <string name="button_continue">继续</string>
    <string name="button_filter_sort">筛选</string>
    <string name="button_filter_offer">优惠</string>
    <string name="button_follow">关注</string>
    <string name="button_following">关注中</string>
    <string name="enter_code_here">请输入二维验证码</string>
    <string name="button_all_result">所有结果</string>
    <string name="button_bookmark">收藏</string>
    <string name="button_bookmarked">已收藏</string>
    <string name="button_categorize_bookmarked">加入分类</string>
    <string name="button_book">订座</string>
    <string name="button_pre_order">外卖</string>
    <string name="button_more">更多</string>
    <string name="button_hide">收起</string>
    <string name="button_apply">确定</string>
    <string name="button_reset">重设</string>
    <string name="button_search_in_this_area">此范围内搜索</string>
    <string name="button_search">搜索</string>
    <string name="button_advanced">高级搜索</string>
    <string name="button_upload">上载中 (%d)</string>
    <string name="button_save">储存</string>
    <string name="button_preview_and_submit">预览及提交</string>
    <string name="button_submit">提交</string>
    <string name="button_view">查看</string>
    <string name="button_view_all">浏览所有</string>
    <string name="button_add_review">写食记</string>
    <string name="button_vote_site">投我一票</string>
    <string name="detail">详细介绍</string>
    <string name="restaurant">餐厅</string>
    <string name="nearby">附近</string>
    <string name="next_step">下一步</string>
    <string name="loading">载入中...</string>
    <string name="maximun_selection">请最多选择%d项。</string>
    <string name="minimun_selection">请最少选择%d项。</string>
    <string name="maximun_selection_location">请最多选择%d项。</string>
    <string name="mark_all">全选</string>
    <string name="update">更新</string>
    <string name="non_member">(非会员)</string>
    <string name="pull_for_more">下拉看更多</string>
    <string name="release_for_more">放手即重新载入</string>
    <string name="see_more">查看更多</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="poi_info">餐厅资料</string>
    <string name="poi_all_branch">所有分店</string>
    <string name="more_info">详细资料</string>
    <string name="more_detail">更多资讯</string>
    <string name="alert_yes">是</string>
    <string name="alert_no">不是</string>
    <string name="alert_request_timeout">出现逾时错误。请稍后再试。</string>
    <string name="alert_please_try_again_later">请稍后再试</string>
    <string name="alert_location_unavailable">未能获取你的位置，\n请开启定位服务后再试。</string>
    <string name="alert_location_notdetermined">无法确定你所在的位置</string>
    <string name="alert_submit_photo">已收到你的相片,\n相片需经审核后才会刊登。</string>
    <string name="alert_delete_draft">确认删除稿件</string>
    <string name="alert_successfully_saved">已成功储存。</string>
    <string name="alert_successfully_submitted">已收到你的食记，食记需经审批后才会刊登。</string>
    <string name="alert_review_successfully_published">提交的食记已刊登</string>
    <string name="alert_review_whether_save">你还未储存食记,现在离开即会舍弃先前已输入的内容及相片。确定离开此页?</string>
    <string name="alert_successfullys_ubmit_comfirm">食记需经审批后才会刊登。</string>
    <string name="alert_submit_fail">连接发生错误，请稍后再试</string>
    <string name="alert_body_require">食记最少需要80字，\n不包括空格及表情符号</string>
    <string name="alert_fill_in_review_title">必须输入食记标题</string>
    <string name="alert_input_all_fields">请填写所有必须输入栏位。</string>
    <string name="alert_verification_email_sent">我们已将确认电邮重新寄到你电邮地址。</string>
    <string name="alert_update_app">有新版本可用</string>
    <string name="alert_later">稍后再说</string>
    <string name="alert_delete_photo_title">删除相片</string>
    <string name="alert_delete_photo">确认删除相片</string>
    <string name="alert_delete_or_choose">确认删除相片或选择其他相片?</string>
    <string name="alert_delete_or_choose_android">删除或选择其他相片?</string>
    <string name="alert_action_on_photo_title">相片选项</string>
    <string name="alert_action_on_photo">请选择你想要的项目</string>
    <string name="alert_reset_review">确认放弃此食记？</string>
    <string name="alert_write_review_edit_draft_title">编辑食记稿件</string>
    <string name="alert_write_review_edit_draft_photo_over_limit">对不起，你的食记稿件的相片数量已经超过上限（%d张）。请在桌面版的\&quot;MyOpenRice\&quot;进行编辑。</string>
    <string name="alert_confirm_delete">确认取消饭局？</string>
    <string name="alert_retry">重试</string>
    <string name="alert_settings">设定</string>
    <string name="alert_delete">删除</string>
    <string name="alert_photo_library">用户相册</string>
    <string name="alert_insert_to_content">插入到内容</string>
    <string name="alert_edit">编辑</string>
    <string name="alert_gps_location_detect">GPS定位显示你目前在%s，需要切换地区吗？</string>
    <string name="alert_location_not_available">未能获取你的位置，请到「设定」开启定位服务后再试。</string>
    <string name="alert_photo_album_no_access_right">此应用程式无法取用你的照片，请到「隐私权设定」中启用存取后再试。</string>
    <string name="alert_camera_no_access_right">此应用程式无法使用你的相机，请到「隐私权设定」中启用后再试。</string>
    <string name="alert_calendar_no_access_right">此应用程式无法使用你的行事历，请到「隐私权设定」中启用后再试。</string>
    <string name="alert_calendar_access_error">很抱歉，我们未能成功处理您的要求。请稍后再试。</string>
    <string name="alert_upload_photo_add_photo">你还未提交相片，现在离开即会舍弃先前已输入的内容及相片。 \n确定离开此页？</string>
    <string name="alert_leave_now">现在离开</string>
    <string name="alert_stay">继续留下</string>
    <string name="alert_write_review_photo_still_uploading">你仍有%d张相片未完成上传，你要放弃上传，还是先检查一下相片上传状况？</string>
    <string name="alert_write_review_draft_loading_failed">未能载入食记稿件</string>
    <string name="alert_discard_upload">放弃上传</string>
    <string name="alert_check_photo">检查相片</string>
    <string name="alert_write_review_confirm_submit">按下 [递交] 键, 即代表你确定所提交的食记及相片并不含任何侵犯版权之内容</string>
    <string name="alert_camera_access_right">请到设定页面开启「隐私设定」，以允许OpenRice使用你的相机。 \n设定&gt;隐私&gt;相机</string>
    <string name="alert_camera_cannot_access">对不起！我们无法使用你的相机。</string>
    <string name="alert_insufficient_space">手机储存空间不足，未能开启程式。\n请清理储存空间，及重新下载或开启程式。</string>
    <string name="push_notificaiton_news_from_or">活动及推广</string>
    <string name="push_notificaiton_news_from_restaurant">收藏餐厅的新优惠</string>
    <string name="push_notificaiton_gathering_invitation">饭局</string>
    <string name="push_notificaiton_all">所有推送通知</string>
    <string name="push_notificaiton_offer">我的优惠</string>
    <string name="push_notificaiton_booking">我的订座</string>
    <string name="title_home">主页</string>
    <string name="title_search">搜索</string>
    <string name="title_quick_search">快速搜索</string>
    <string name="title_advanced_search">高级搜索</string>
    <string name="title_reviews">食记</string>
    <string name="title_sort_section">排序</string>
    <string name="title_filters">筛选</string>
    <string name="title_filter_section">筛选</string>
    <string name="title_price_range">人均消费</string>
    <string name="title_offers">优惠</string>
    <string name="title_offers_section">优惠</string>
    <string name="title_features">特别条件</string>
    <string name="title_features_section">特别条件</string>
    <string name="title_location">位置</string>
    <string name="title_cuisine">菜式</string>
    <string name="title_food_type">食物种类</string>
    <string name="title_more_features">更多</string>
    <string name="title_more_offers">更多</string>
    <string name="title_editor_picks">编辑精选</string>
    <string name="title_whatshot">热门话题</string>
    <string name="title_magazine">饮食志</string>
    <string name="title_me">我的</string>
    <string name="title_buffet">自助餐</string>
    <string name="title_hotpot">火锅</string>
    <string name="title_restaurant_chart">餐厅排行榜</string>
    <string name="title_home_chart">排行榜</string>
    <string name="title_my_openrice">我的OpenRice</string>
    <string name="title_meal_invitation">约饭局</string>
    <string name="title_add_to_categories">新增至分类</string>
    <string name="title_gathering">饭局</string>
    <string name="title_sponsor">赞助</string>
    <string name="title_my_about_max_count">自我介绍，仅限500字…</string>
    <string name="title_my_about_max_count_and_current_count">%1$s字\n仅限%2$s字</string>
    <string name="title_selected">%d 已选</string>
    <string name="title_bookmarked">已收藏</string>
    <string name="empty_general_title">没有符合你要求的餐厅。</string>
    <string name="empty_general_message">请尝试以其他关键字或条件搜索。</string>
    <string name="empty_poi_closed_message">餐厅可能已结业。</string>
    <string name="empty_poi_action">新增餐厅</string>
    <string name="empty_poi_closed_action">显示已结业餐厅</string>
    <string name="empty_review_message">此餐厅暂未有食记。</string>
    <string name="empty_review_action">快来写第一篇食记!</string>
    <string name="empty_photo_message">此餐厅暂未有相片。</string>
    <string name="empty_photo_action">快上传第一张相片!</string>
    <string name="empty_menu_message">此餐厅暂未有菜单。</string>
    <string name="empty_menu_action">快上传第一张菜单!</string>
    <string name="empty_coupon_title">找不到符合你要求的优惠券。</string>
    <string name="empty_myreview_published_title">暂时没有食记</string>
    <string name="empty_myreview_published_message">立即试试</string>
    <string name="empty_myreview_pending_message">暂未有未批核食记。</string>
    <string name="empty_myreview_draft_message">暂未有食记稿件</string>
    <string name="empty_public_review_message">尚未撰写食记</string>
    <string name="empty_mybookmark_poi_title">尚未有收藏餐厅</string>
    <string name="empty_mybookmark_poi_message">立即收藏你想去/去过的餐厅，方便随时查看。</string>
    <string name="empty_public_bookmark_poi_message">尚未收藏餐厅</string>
    <string name="empty_mybookmark_offer_title">暂未有收藏优惠</string>
    <string name="empty_mybookmark_offer_message">快去看看最新的优惠吧!</string>
    <string name="empty_public_bookmark_offer_message">尚未收藏优惠</string>
    <string name="empty_inbox_public_title">暂时没有消息</string>
    <string name="empty_inbox_public_message">OpenRice 给你的消息，会在这里出现。</string>
    <string name="empty_inbox_private_title">暂时未有新消息。请密切留意OpenRice的更新！</string>
    <string name="empty_inbox_private_message">暂时尚未有任何推送通知消息。如有新的关注者、赞好及评论，我们将在此显示。</string>
    <string name="empty_follower_title">立即发表有趣的内容</string>
    <string name="empty_network_unavailable_title">没有网络连线</string>
    <string name="empty_network_unavailable_message">请检查你的连线状态然後再试一次。</string>
    <string name="login_forget_button_message">忘记密码</string>
    <string name="login_login">登录</string>
    <string name="login_openrice_account_or">或以OpenRice帐户登入</string>
    <string name="login_email_or_username">电邮/会员名称/电话号码</string>
    <string name="login_password">密码</string>
    <string name="login_resend_email">重发电邮</string>
    <string name="login_reset_pw">重设密码</string>
    <string name="meal_invitation_login_benefits">以OpenRice / Facebook / Google 帐户登录尽享更多功能，包括 : 收到饭局确认或更改的推送通知﹑随时在\&quot;我的OpenRice\&quot;内查看饭局的出席名单及投选餐厅</string>
    <string name="setting_fb_login">以Facebook帐户登录</string>
    <string name="setting_google_login">以Google帐户登录</string>
</resources>