<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:visibility="visible">

            <Button
                android:id="@+id/fbButton"
                style="@style/W18N"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_facebook"
                android:gravity="center"
                android:text="@string/setting_fb_login" />

            <Button
                android:id="@+id/googleButton"
                style="@style/W18N"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_google"
                android:gravity="center"
                android:text="@string/setting_google_login" />

            <View
                android:id="@+id/social_separate_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/separate_line" />

            <TextView
                android:id="@+id/social_header_text"
                style="@style/DGY14N"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="14dp"
                android:text="@string/login_openrice_account_or" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white_box_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userName"
                    style="@style/BR14N"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/login_email_or_username"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:singleLine="true" />

                <LinearLayout
                    android:id="@+id/userNameErrorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/o" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="18dp"
                            android:src="@drawable/common_error_or" />

                        <TextView
                            android:id="@+id/userNameErrorMsg"
                            style="@style/O13N"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="4dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/link_email"
                            style="@style/O14N"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:background="@drawable/bg_stroke_red"
                            android:gravity="center"
                            android:padding="6dp"
                            android:text="@string/login_resend_email"
                            android:visibility="gone" />

                    </LinearLayout>
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/separate_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userName"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/password"
                        style="@style/BR14N"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:padding="16dp"
                        android:singleLine="true" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/separate_line" />

                    <TextView
                        android:id="@+id/show_password"
                        style="@style/BR14N"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/show" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/passwordErrorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/o" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="18dp"
                            android:src="@drawable/common_error_or" />

                        <TextView
                            android:id="@+id/passwordErrorMsg"
                            style="@style/O13N"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="4dp"
                            android:layout_weight="1"
                            android:text="Error" />

                        <TextView
                            android:id="@+id/link_forgot"
                            style="@style/O14N"
                            android:layout_width="wrap_content"
                            android:layout_height="26dp"
                            android:layout_marginLeft="4dp"
                            android:background="@drawable/bg_stroke_red"
                            android:gravity="center"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/login_reset_pw"
                            android:visibility="gone" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/loginButton"
                style="@style/BR18N"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/login_login"
                android:typeface="sans" />

            <TextView
                android:id="@+id/tv_login_forgot"
                style="@style/O14N"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/login_forget_button_message" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>